--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -190,170 +190,233 @@ image::models/design/images/dialog.png[]
 |Pfad der externen Klasse 
 |Verwendet von (Klasse der eigenen Anwendung)
 
+|Accountancy
+|org.{zwsp}salespointframework.{zwsp}accountancy.{zwsp}Accountancy
+|FinanceController, FinanceService
+
+|AccountancyEntry
+|org.{zwsp}salespointframework.{zwsp}accountancy.{zwsp}AccountancyEntry
+|FinanceService
+
 |Assert
-|org.springframework.util.Assert
-|CatalogDataInitializer, InventoryInitializer
+|org.{zwsp}springframework.{zwsp}util.{zwsp}Assert
+|CatalogDataInitializer, FinanceController, FinanceService, InventoryInitializer, MissMintOrder, MissMintService, OrderOverviewController, OrderService, PickUpController, PickUpService, ReceivingController, ReceivingService, ServiceDataInitializer, ServiceManager, Staff, StaffController, StaffInitializer, StaffManagement, TimeController, TimeService, TimeTableService, Utils
 
-|BusinessTime 
-|org.{zwsp}salespointframework.{zwsp}time.{zwsp}BusinessTime 
-|ReceivingController, OrderDataInitializer, OrderService
+|BusinessTime
+|org.{zwsp}salespointframework.{zwsp}time.{zwsp}BusinessTime
+|FinanceService, IndexController, OrderService, ReceivingController, RoomService, SalaryService, TimeController, TimeService, TimeTableService
 
-|Catalog 
-|org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}Catalog 
-|OrdersController, ReceivingController, OrderDataInitializer, ServiceDataInitializer, CatalogController, CatalogDataInitializer, InventoryInitializer
+|Catalog
+|org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}Catalog
+|CatalogDataInitializer, InventoryInitializer, MaterialManager, OrderItemController, OrderItemManager, OrderOverviewController, OrderService, ReceivingService, ServiceDataInitializer, ServiceManager
 
-|Component 
-|org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Component 
-|OrderDataInitializer, ServiceDataInitializer, InventoryInitializer, CatalogDataInitializer, FinanceEntryDataInitializer
+|Component
+|org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Component
+|CatalogDataInitializer, FinanceDataInitializer, InventoryInitializer, Messages, RoomDataInitializer, ServiceDataInitializer, StaffInitializer
 
-|Controller 
-|org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Controller 
-|OrdersController, PickUpController, ReceivingController, UserController, InventoryController, CatalogController, FinanceController
+|Configuration
+|org.{zwsp}springframework.{zwsp}context.{zwsp}annotation.{zwsp}Configuration
+|Application
+
+|Controller
+|org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Controller
+|FinanceController, IndexController, InventoryController, OrderItemController, OrderOverviewController, PickUpController, ReceivingController, RoomController, StaffController, TimeController
 
 |CrudRepository
 |org.{zwsp}springframework.{zwsp}data.{zwsp}repository.{zwsp}CrudRepository
-|EntriesRepository, RoomsRepository, StaffRepository, FinanceRepository
+|EntryRepository, RoomRepository, StaffRepository
 
-|DataInitializer 
-|org.{zwsp}salespointframework.{zwsp}core.{zwsp}DataInitializer 
-|OrderDataInitializer, ServiceDataInitializer, CatalogDataInitializer, InventoryInitializer, TempUserInitializer,FinanceEntryDataInitializer
+|DataInitializer
+|org.{zwsp}salespointframework.{zwsp}core.{zwsp}DataInitializer
+|CatalogDataInitializer, FinanceDataInitializer, InventoryInitializer, RoomDataInitializer, ServiceDataInitializer, StaffInitializer
 
-|Errors 
-|org.{zwsp}springframework.{zwsp}validation.{zwsp}Errors 
-|ReceivingController, UserController, FinanceController
+|Database
+|org.{zwsp}hibernate.{zwsp}dialect.{zwsp}Database
+|Room
 
 |EURO
-|org.salespointframework.core.Currencies.EURO
+|org.{zwsp}salespointframework.{zwsp}core.{zwsp}Currencies.{zwsp}EURO
 |CatalogDataInitializer
 
-|GetMapping 
-|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}GetMapping 
-|PickUpController, ReceivingController, UserController, CatalogController, InventoryController, FinanceController
+|EnableSalespoint
+|org.{zwsp}salespointframework.{zwsp}EnableSalespoint
+|Application
 
-|HttpStatus 
-|org.{zwsp}springframework.{zwsp}http.{zwsp}HttpStatus 
-|PickUpController, ReceivingController
+|Errors
+|org.{zwsp}springframework.{zwsp}validation.{zwsp}Errors
+|FinanceController, ReceivingController, RoomController, StaffController
+
+|GetMapping
+|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}GetMapping
+|FinanceController, IndexController, InventoryController, OrderOverviewController, PickUpController, ReceivingController, StaffController
+
+|HttpSecurity
+|org.{zwsp}springframework.{zwsp}security.{zwsp}config.{zwsp}annotation.{zwsp}web.{zwsp}builders.{zwsp}HttpSecurity
+|Application
+
+|HttpStatus
+|org.{zwsp}springframework.{zwsp}http.{zwsp}HttpStatus
+|PickUpController, Utils
+
+|Interval
+|org.{zwsp}salespointframework.{zwsp}time.{zwsp}Interval
+|FinanceService
 
 |InventoryItemIdentifier
-|org.salespointframework.inventory.InventoryItemIdentifier
-|InventoryController
+|org.{zwsp}salespointframework.{zwsp}inventory.{zwsp}InventoryItemIdentifier
+|InventoryController, MaterialForm, MaterialManager
+
+|LocaleContextHolder
+|org.{zwsp}springframework.{zwsp}context.{zwsp}i18n.{zwsp}LocaleContextHolder
+|Messages
 
 |LoggedIn
 |org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}web.{zwsp}LoggedIn
 |ReceivingController
 
+|MessageSource
+|org.{zwsp}springframework.{zwsp}context.{zwsp}MessageSource
+|Messages
+
+|MessageSourceAccessor
+|org.{zwsp}springframework.{zwsp}context.{zwsp}support.{zwsp}MessageSourceAccessor
+|Messages
+
 |Metric
-|org.salespointframework.quantity.Metric
-|orderItem, Material, CatalogDataInitializer, InventoryInitializer 
+|org.{zwsp}salespointframework.{zwsp}quantity.{zwsp}Metric
+|CatalogDataInitializer, InventoryInitializer, Material, MaterialManager, ServiceConsumptionManager
 
-|Model 
-|org.{zwsp}springframework.{zwsp}ui.{zwsp}Model 
-|OrdersController, PickUpController, ReceivingController, UserController, CatalogController, InventoryController, FinanceController
+|Model
+|org.{zwsp}springframework.{zwsp}ui.{zwsp}Model
+|FinanceController, IndexController, InventoryController, OrderItemController, OrderOverviewController, PickUpController, ReceivingController, RoomController, StaffController
 
-|Money 
-|org.{zwsp}javamoney.{zwsp}moneta.{zwsp}Money 
-|OrderService, ServiceDataInitializer, CatalogDataInitializer
+|ModelAttribute
+|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}ModelAttribute
+|InventoryController, ReceivingController, StaffController
 
-|MonetaryAmount
-|import javax.money.MonetaryAmount
-|orderItem, Material
+|Money
+|org.{zwsp}javamoney.{zwsp}moneta.{zwsp}Money
+|CatalogDataInitializer, FinanceDataInitializer, FinanceService, OrderItem, OrderService, SalaryService, ServiceDataInitializer
 
-|OnDelete
-|org.{zwsp}hibernate.{zwsp}annotations.{zwsp}OnDelete;
-|Room, TimeTableEntry
+|Order
+|org.{zwsp}springframework.{zwsp}core.{zwsp}annotation.{zwsp}Order
+|FinanceDataInitializer, ServiceDataInitializer
 
-|OnDeleteAction
-|org.{zwsp}hibernate.{zwsp}annotations.{zwsp}OnDeleteAction;
-|Room, TimeTableEntry
+|Order
+|org.{zwsp}salespointframework.{zwsp}order.{zwsp}Order
+|MissMintOrder
 
-|Order 
-|org.{zwsp}salespointframework.{zwsp}order.{zwsp}Order 
-|MissMintOrder, ServiceDataInitializer
+|OrderManager
+|org.{zwsp}salespointframework.{zwsp}order.{zwsp}OrderManager
+|OrderItemController, OrderItemManager, OrderOverviewController, OrderService, PickUpService, ReceivingController, ReceivingService, TimeTableService
 
-|Order 
-|org.{zwsp}springframework.{zwsp}core.{zwsp}annotation.{zwsp}Order 
-|OrderDataInitializer
+|Page
+|org.{zwsp}springframework.{zwsp}data.{zwsp}domain.{zwsp}Page
+|OrderItemController, OrderItemManager, OrderOverviewController
 
-|OrderManager 
-|org.{zwsp}salespointframework.{zwsp}order.{zwsp}OrderManager 
-|OrdersController, PickUpController, ReceivingController, OrderDataInitializer, OrderService
+|Pageable
+|org.{zwsp}springframework.{zwsp}data.{zwsp}domain.{zwsp}Pageable
+|OrderItemController, OrderItemManager, OrderOverviewController, OrderService, TimeTableService
 
-|Page 
-|org.{zwsp}springframework.{zwsp}data.{zwsp}domain.{zwsp}Page 
-|OrdersController
+|Pair
+|org.{zwsp}springframework.{zwsp}data.{zwsp}util.{zwsp}Pair
+|CatalogDataInitializer, ServiceConsumptionManager, ServiceDataInitializer, TimeTableService
 
-|Pageable 
-|org.{zwsp}springframework.{zwsp}data.{zwsp}domain.{zwsp}Pageable 
-|OrdersController, OrderService
+|Password
+|org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}Password
+|StaffInitializer, StaffManagement
 
-|Pair 
-|org.{zwsp}springframework.{zwsp}data.{zwsp}util.{zwsp}Pair 
-|ServiceDataInitializer, CatalogDataInitializer
-
-|PathVariable 
-|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}PathVariable 
-|PickUpController, UserController, InventoryController
-
-|Product 
-|org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}Product 
-|Service, orderItem, Material
-
-|ProductIdentifier 
-|org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}ProductIdentifier 
-|OrdersController, ReceivingForm
+|PathVariable
+|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}PathVariable
+|OrderOverviewController, PickUpController, StaffController
 
 |PostMapping
-|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}PostMapping 
-|PickUpController, ReceivingController, UserController, InventoryController
+|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}PostMapping
+|FinanceController, InventoryController, PickUpController, ReceivingController, StaffController, TimeController
 
-|PreAuthorize 
-|org.{zwsp}springframework.{zwsp}security.{zwsp}access.{zwsp}prepost.{zwsp}PreAuthorize 
-|OrdersController, PickUpController, ReceivingController, UserController
+|PreAuthorize
+|org.{zwsp}springframework.{zwsp}security.{zwsp}access.{zwsp}prepost.{zwsp}PreAuthorize
+|FinanceController, InventoryController, OrderItemController, OrderOverviewController, PickUpController, ReceivingController, RoomController, StaffController, TimeController
 
-|Qualifier 
-|org.{zwsp}springframework.{zwsp}beans.{zwsp}factory.{zwsp}annotation.{zwsp}Qualifier 
+|Product
+|org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}Product
+|Material, MissMintService, OrderItem
+
+|ProductIdentifier
+|org.{zwsp}salespointframework.{zwsp}catalog.{zwsp}ProductIdentifier
+|OrderItemController, OrderItemForm, OrderItemManager, OrderOverviewController, ReceivingForm, ServiceManager
+
+|PropertySource
+|org.{zwsp}springframework.{zwsp}context.{zwsp}annotation.{zwsp}PropertySource
+|Application
+
+|Quantity
+|org.{zwsp}salespointframework.{zwsp}quantity.{zwsp}Quantity
+|InventoryInitializer, MaterialManager, MissMintOrder, ReceivingService, ServiceConsumptionManager
+
+|RequestMapping
+|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}RequestMapping
+|IndexController
+
+|ResponseStatusException
+|org.{zwsp}springframework.{zwsp}web.{zwsp}server.{zwsp}ResponseStatusException
+|PickUpController, Utils
+
+|Role
+|org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}Role
+|StaffInitializer, StaffManagement
+
+|SalespointSecurityConfiguration
+|org.{zwsp}salespointframework.{zwsp}SalespointSecurityConfiguration
+|Application
+
+|Service
+|org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Service
+|FinanceService, MaterialManager, OrderItemManager, OrderService, PickUpService, ReceivingService, RoomService, SalaryService, ServiceManager, StaffManagement, TimeService, TimeTableService
+
+|Session
+|org.{zwsp}hibernate.{zwsp}Session
+|Utils
+
+|SessionAttribute
+|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}SessionAttribute
 |ReceivingController
 
-|Quantity 
-|org.{zwsp}salespointframework.{zwsp}quantity.{zwsp}Quantity 
-|MissMintOrder, InventoryInitializer, InventoryController
+|SpringApplication
+|org.{zwsp}springframework.{zwsp}boot.{zwsp}SpringApplication
+|Application
 
-|RequestMapping 
-|org.{zwsp}springframework.{zwsp}web.{zwsp}bind.{zwsp}annotation.{zwsp}RequestMapping 
-|OrdersController
-
-|ResponseStatusException 
-|org.{zwsp}springframework.{zwsp}web.{zwsp}server.{zwsp}ResponseStatusException
-|PickUpController, ReceivingController
-
-|Service 
-|org.{zwsp}springframework.{zwsp}stereotype.{zwsp}Service 
-|OrderService, UserManagement, FinanceManager
+|StreamUtils
+|org.{zwsp}springframework.{zwsp}data.{zwsp}util.{zwsp}StreamUtils
+|TimeTableService
 
 |Streamable
 |org.{zwsp}springframework.{zwsp}data.{zwsp}util.{zwsp}Streamable
-|FinanceManager, InventoryController, CatalogDataInitializer
+|EntryRepository, FinanceService, MaterialManager, ServiceManager, StaffRepository
+
+|Transactional
+|org.{zwsp}springframework.{zwsp}transaction.{zwsp}annotation.{zwsp}Transactional
+|OrderItemManager, StaffManagement
 
 |UniqueInventory
-|org.salespointframework.inventory.UniqueInventory
-|InventoryInitializer, InventoryController
+|org.{zwsp}salespointframework.{zwsp}inventory.{zwsp}UniqueInventory
+|InventoryController, InventoryInitializer, MaterialManager, ReceivingService
 
 |UniqueInventoryItem
-|org.salespointframework.inventory.UniqueInventoryItem
-|InventoryInitializer, InventoryController
+|org.{zwsp}salespointframework.{zwsp}inventory.{zwsp}UniqueInventoryItem
+|InventoryController, InventoryInitializer, MaterialManager, ReceivingService
 
-|UserAccount 
-|org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}UserAccount 
-|ReceivingController, MissMintOrder, OrderDataInitializer, User, UserManagement
+|UserAccount
+|org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}UserAccount
+|MissMintOrder, ReceivingController, Staff, StaffManagement, StaffRepository
 
-|UserAccountManager 
+|UserAccountManager
 |org.{zwsp}salespointframework.{zwsp}useraccount.{zwsp}UserAccountManager
-|OrderDataInitializer, UserManagement
+|StaffInitializer, StaffManagement
 
-|Value 
-|org.{zwsp}springframework.{zwsp}beans.{zwsp}factory.{zwsp}annotation.{zwsp}Value 
-|OrderService, ServiceDataInitializer
-
+|Value
+|org.{zwsp}springframework.{zwsp}beans.{zwsp}factory.{zwsp}annotation.{zwsp}Value
+|FinanceDataInitializer, FinanceService, OrderService, SalaryService, ServiceDataInitializer
 |===
 
 == Bausteinsicht
