add error message to template

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ general.forward = Forward
 index.pleaselogin = Please log in to use the management software.
 
 rooms = Rooms
+rooms.add.name.exists = Room already exists!
 
 finance.balance = Balance
 finance.additem.submit= Add Finance Item
