Update and rename 2019.01.10.adoc to 2020.01.10.adoc

--- a/src/main/asciidoc/protocols/2020.01.10.adoc
+++ b/src/main/asciidoc/protocols/2020.01.10.adoc
@@ -22,9 +22,10 @@ _Teilnehmer_:
 
 == Aufgaben bis Endpräsentation
 
-- Coverage für Sonarqube erhöhen
+- Coverage für Sonarqube und Jenkins erhöhen
 - Kann Kriterien erfüllen
 - Issues fixen
 - Branches mergen
--
+- Code Smells fixen
+- JavaDoc aktualisieren
 
