Change order of validation

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -4,4 +4,4 @@ ReceivingForm.service.NotNull = Bitte wählen Sie eine Dienstleistung aus.
 RegistrationForm.name.NotBlank = Name darf nicht leer sein.
 RegistrationForm.password.NotBlank = Password darf nicht leer sein.
 EditStaffForm.name.NotBlank = Name darf nicht leer sein.
-PasswordForm.password.NotBlank = Password darf nicht leer sein.
+PasswordForm.password.NotBlank = Passwort darf nicht leer sein.
