Add more tests to StaffController

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -4,4 +4,6 @@ ReceivingForm.service.NotNull = Bitte wählen Sie eine Dienstleistung aus.
 RegistrationForm.name.NotBlank = Name darf nicht leer sein.
 RegistrationForm.password.NotBlank = Password darf nicht leer sein.
 EditStaffForm.name.NotBlank = Name darf nicht leer sein.
+EditStaffForm.salary.NotNegative = Gehalt kann nicht negativ sein.
+EditStaffForm.salary.TooLarge = Gehalt ist zu groß.
 PasswordForm.password.NotBlank = Passwort darf nicht leer sein.
