improve templates and translation

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -9,6 +9,8 @@ general.price = Preis
 general.current-time = Die aktuelle Zeit ist {0}.
 general.forward = Vorspulen
 general.password = Passwort
+general.description = Beschreibung
+general.name = Name
 
 index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutzen.
 
@@ -103,6 +105,6 @@ materials.table.quantity = Menge
 materials.table.name = Name
 
 orderItems = Bestellungsgegenstände
-orderItems.item = Gegenstand 
+orderItems.item = Gegenstand
 orderItems.customer = Kunde
 orderItems.id = Order-ID
