--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-general.projectname = Miss (Mint store management)
+general.projectname = Mint store management
 general.brandname = Miss Mint Mending Points
 general.slogan = Repairs cheap and easy
 general.management = Management
@@ -11,6 +11,8 @@ general.price = Price
 general.current-time = The current time is {0}.
 general.forward = Forward
 general.password = Password
+general.description = Description
+general.name = Name
 
 index.pleaselogin = Please log in to use the management software.
 
@@ -108,7 +110,7 @@ materials.consume = Consume
 materials.table.quantity = Quantity
 materials.table.name = Name
 
-orderItems = Order-Items
-orderItems.item = Item 
+orderItems = Order Items
+orderItems.item = Item
 orderItems.customer = Customer
-orderItems.id = Order-ID
+orderItems.id = Order ID
