--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,12 +19,11 @@ index.pleaselogin = Please log in to use the management software.
 rooms = Rooms
 rooms.names = Room name
 rooms.names.enter = Enter a name
-rooms.add.name.exists = Room already exists!
-rooms.add.name.empty = This can not be left empty!
 rooms.add.submit = Submit
 rooms.delete = Delete
 rooms.timetable = Timetable (today)
 rooms.times = Times
+AddRoomForm.exists = Room already exists!
 
 finance.balance = Balance
 finance.additem.submit= Add Finance Item
