--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -17,12 +17,11 @@ index.pleaselogin = Bitte melden Sie sich an, um die Management-Software zu nutz
 rooms = Räume
 rooms.names = Raumname
 rooms.names.enter = Raumname eingeben
-rooms.add.name.exists = Raum existiert bereits!
-rooms.add.name.empty = Dieses Feld darf nicht leer sein!
 rooms.add.submit = Hinzufügen
 rooms.delete = Löschen
 rooms.timetable = Belegplan (heute)
 rooms.times = Zeiten
+AddRoomForm.exists = Raum existiert bereits!
 
 finance.balance = Bilanzen
 finance.additem.submit= Finanzen hinfügen
