--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -7,4 +7,5 @@ EditStaffForm.name.NotBlank = Name darf nicht leer sein.
 EditStaffForm.salary.NotNegative = Gehalt kann nicht negativ sein.
 EditStaffForm.salary.TooLarge = Gehalt ist zu groß.
 PasswordForm.password.NotBlank = Passwort darf nicht leer sein.
+AddFinanceForm.description.blank = Beschreibung darf nicht leer sein.
 AddRoomForm.name.empty = Dieses Feld darf nicht leer sein!
