--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -115,6 +115,8 @@ materials.restock = Restock
 materials.consume = Consume
 materials.table.quantity = Quantity
 materials.table.name = Name
+material.consume.error = You cannot consume that much material.
+material.restock.error = You cannot restock that much material. 
 
 orderItems = Order Items
 orderItems.item = Item
