--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -109,6 +109,9 @@ materials.restock = Nachbestellen
 materials.consume = Verbrauchen
 materials.table.quantity = Menge
 materials.table.name = Name
+material.consume.error = Sie können nicht so viel Material konsumieren.
+material.restock.error = Sie können nicht so viel Material nachbestellen. 
+
 
 orderItems = Bestellungsgegenstände
 orderItems.item = Gegenstand
