validation messages added

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -9,3 +9,5 @@ EditStaffForm.salary.TooLarge = Gehalt ist zu groß.
 PasswordForm.password.NotBlank = Passwort darf nicht leer sein.
 AddFinanceForm.description.blank = Beschreibung darf nicht leer sein.
 AddRoomForm.name.empty = Dieses Feld darf nicht leer sein!
+materials.error.low = Minimalmenge beträgt 1.
+materials.error.high = Maximalmenge beträgt 10000.
