--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,9 +34,20 @@ users.management = User Management
 users.title = User Overview
 users.remove = Remove
 users.remove.confirmation = Confirm Deletion
+users.overview.forename = Forename
+users.overview.surname = Surname
+users.overview.username = Username
+users.overview.salary = Monthly Salary in €
+users.overview.skills = Skills
+users.overview.action = Action
 users.edit = Edit
 users.edit.save = Save changes
 users.edit.title = User Edit
+users.edit.col.surname = Surname
+users.edit.col.forename = Forename
+users.edit.col.username = Username
+users.edit.col.salary = Salary/Month in €
+users.edit.col.skills = Skills
 users.edit.password.title = Change Password
 users.registration.title = User Registration
 users.registration.userdata = User Data
