--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -31,9 +31,20 @@ users.management = Nutzerverwaltung
 users.title = Nutzerübersicht
 users.remove = Entlassen
 users.remove.confirmation = Entlassen Bestätigen
+users.overview.forename = Vorname
+users.overview.surname = Nachname
+users.overview.username = Nutzername
+users.overview.salary = Gehalt/Monat in €
+users.overview.skills = Fähigkeiten
+users.overview.action = Aktion
 users.edit = Bearbeiten
 users.edit.save = Änderungen speichern
 users.edit.title = Nuzerbearbeitung
+users.edit.col.surname = Nachname
+users.edit.col.forename = Vorname
+users.edit.col.username = Nutzername
+users.edit.col.salary = Gehalt/Monat in €
+users.edit.col.skills = Fähigkeiten
 users.edit.password.title = Passwort Ändern
 users.registration.title = Nutzerregistrierung
 users.registration.userdata = Nutzerdaten
