validation messages for finance

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -8,6 +8,8 @@ EditStaffForm.salary.NotNegative = Gehalt kann nicht negativ sein.
 EditStaffForm.salary.TooLarge = Gehalt ist zu groß.
 PasswordForm.password.NotBlank = Passwort darf nicht leer sein.
 AddFinanceForm.description.blank = Beschreibung darf nicht leer sein.
+AddFinanceForm.BigDecimal.NotNull = Bitte geben Sie den Preis ein.
 AddRoomForm.name.empty = Dieses Feld darf nicht leer sein!
 materials.error.low = Minimalmenge beträgt 1.
 materials.error.high = Maximalmenge beträgt 10000.
+
