validation messages for finance

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -9,6 +9,7 @@ EditStaffForm.salary.TooLarge = Gehalt ist zu groß.
 PasswordForm.password.NotBlank = Passwort darf nicht leer sein.
 AddFinanceForm.description.blank = Beschreibung darf nicht leer sein.
 AddFinanceForm.BigDecimal.NotNull = Bitte geben Sie den Preis ein.
+AddFinanceForm.BigDecimal.Digit = Preis muss in Ziffern angegeben werden.
 AddRoomForm.name.empty = Dieses Feld darf nicht leer sein!
 materials.error.low = Minimalmenge beträgt 1.
 materials.error.high = Maximalmenge beträgt 10000.
