messages properties for finance

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,9 +26,17 @@ rooms.times = Times
 AddRoomForm.exists = Room already exists!
 
 finance.balance = Balance
-finance.additem.submit= Add Finance Item
-finance.addItem.financedata=Finance Data
+finance.addItem.submit= Add Finance Item
 finance.addItem.title=Finance Title
+finance.addItem.price = Price
+finance.addItem.description= Description
+finance.value = Value
+finance.date = Date
+finance.description = Description
+finance.month = Show Last Month
+finance = Show all Finances
+finance.addItem = Add new Finances
+
 
 users.management = User Management
 users.title = User Overview
