--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -24,8 +24,16 @@ rooms.times = Zeiten
 AddRoomForm.exists = Raum existiert bereits!
 
 finance.balance = Bilanzen
-finance.additem.submit = Finanzen hinfügen
+finance.addItem.submit = Finanzen hinfügen
 finance.addItem.title =Finanzen Einfügen
+finance.addItem.price = Preis
+finance.addItem.description = Beschreibung
+finance.value = Wert
+finance.date = Datum
+finance.description = Beschreibung
+finance.month = Letzten Monat anzeigen
+finance = Gesamtübersicht anzeigen
+finance.addItem = Finance item hinzufügen
 
 users.management = Nutzerverwaltung
 users.title = Nutzerübersicht
