messages properties for finance

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,6 +36,7 @@ finance.description = Description
 finance.month = Show Last Month
 finance = Show all Finances
 finance.addItem = Add new Finances
+finance.summe = Sum
 
 
 users.management = User Management
