dev doc for finance

--- a/src/main/asciidoc/developer_documentation.adoc
+++ b/src/main/asciidoc/developer_documentation.adoc
@@ -657,10 +657,7 @@ um rechtzeitige Fertigstellung zu ermöglichen.
 |RoomService
 
 |FinancialManagement
-|FinanceManager
-
-|FinancialItem
-|FinancialItem
+|FinanceService
 
 |TimeTableEntry
 |TimeTableEntry
